<resources>
    <string name="app_name">Ride Share</string>
    <string name="sender_id">521920203081</string>

    <string name="home">Dashboard</string>
    <string name="my_vehicles">My Vehicles</string>
    <string name="preferred_destinations">Preferred Destinations</string>
    <string name="custom_route">Custom Route</string>
    <string name="my_trips">My Trips</string>
    <string name="my_accounts">My Accounts</string>
    <string name="settings">Settings</string>
    <string name="my_scrore">My Score</string>
    <string name="my_rating">My Rating</string>

    <string name="phone_number_validation">Phone number is required.</string>
    <string name="phone_number_digit_validation">Please enter 10 digit number.</string>

    <string name="otp_validation">OTP is required.</string>
    <string name="otp_digit_validation">Please enter valid OTP.</string>

    <string name="GPSAlertDialogTitle">GPS is setting</string>
    <string name="GPSAlertDialogMessage">GPS is not enabled. Do you want to go to setting menu</string>
    <string name="action_settings">Settings</string>
    <string name="cancel">Cancel</string>
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>My Vehicles</item>
        <item>Preferred Destinations</item>
        <item>Custom Route</item>
        <item>My Trips</item>
        <item>My Accounts</item>
        <item>Settings</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

</resources>
